--- a/src/server/db/mysql.ini
+++ b/src/server/db/mysql.ini
@@ -1,12 +1,12 @@
 #数据库配置文件
 ip=127.0.0.1
 port=3306
-username=root
-password=xlx0220@
+username=debian-sys-main
+password=LZcsEeYtC2itengH
 dbname=chat
 initSize=10
 maxSize=1024
 #最大空闲时间默认单位是秒
-maxIdleTime=60
+maxIdleTime=10
 #连接超时时间单位是毫秒
 connectionTimeOut=100
