服务端编写完成

--- a/src/server/db/mysql.ini
+++ b/src/server/db/mysql.ini
@@ -1,8 +1,10 @@
 #数据库配置文件
 ip=127.0.0.1
 port=3306
-username=debian-sys-main
-password=LZcsEeYtC2itengH
+# username=debian-sys-main
+# password=LZcsEeYtC2itengH
+username=root
+password=xuyang0518
 dbname=chat
 initSize=10
 maxSize=1024
